# OpenCascade_MyShapes

./: CMakeLists.txt  Viewer.cpp  Viewer.h  ViewerInterspector.cpp  ViewerInterspector.h  main.cpp
